# persona

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py
backend/app/core/: persona.py  security.py
backend/app/services/: cal_service.py  rag_service.py
backend/scripts/: ingest.py
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
