[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pinecone>=9.1.0",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.34.2",
]
